Initial visibility fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 body {
   margin: 0;
 
-  font-family: "Graduate";
+  font-family: "Graduate", sans-serif;
 
   background-color: $olive;
 }
